stable 2 remove background shit

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <!-- Image Box 1 -->
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -116,7 +116,7 @@
                     </a>
                 </div>
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -124,7 +124,7 @@
                     </a>
                 </div>
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" title="Green Boat Neck Blouse">
+                    <a class="image-with-hover-overlay image-hover-zoom" >
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
