--- a/index.html
+++ b/index.html
@@ -61,86 +61,186 @@
             <!-- Image Gallery Row -->
             <div class="background-white image-row" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px;">
 
-                <!-- Image Box 1 -->
+                <!-- Image Boxes -->
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="green1.jpg" />
+                        <img class="full-img" src="img/black1.jpg" />
                     </a>
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="gold1.jpg" />
+                        <img class="full-img" src="img/black2.jpg" />
                     </a>
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="maroon1.jpg" />
+                        <img class="full-img" src="img/black3.jpg" />
                     </a>
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="black1.jpg" />
+                        <img class="full-img" src="img/black4.jpg" />
                     </a>
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="green2.jpg" />
+                        <img class="full-img" src="img/ghalt1.jpg" />
                     </a>
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="black2.jpg" />
-                    </a>
-                </div>
-                <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
-                        <div class="image-hover-overlay background-primary">
-                            <div class="image-hover-overlay-content text-center padding-2x"></div>
-                        </div>
-                        <img class="full-img" src="black4.jpg" />
-                    </a>
-                </div>
-                <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
-                        <div class="image-hover-overlay background-primary">
-                            <div class="image-hover-overlay-content text-center padding-2x"></div>
-                        </div>
-                        <img class="full-img" src="maroon2.jpg" />
+                        <img class="full-img" src="img/ghalt1b.jpg" />
                     </a>
                 </div>
 
                 <div class="image-container">
-                    <a class="image-with-hover-overlay image-hover-zoom" >
+                    <a class="image-with-hover-overlay image-hover-zoom">
                         <div class="image-hover-overlay background-primary">
                             <div class="image-hover-overlay-content text-center padding-2x"></div>
                         </div>
-                        <img class="full-img" src="ghalt1.jpg" />
+                        <img class="full-img" src="img/ghigh.jpg" />
                     </a>
                 </div>
 
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/gold1.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/gold1b.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/gone1.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/gone1b.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/gone2.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/gone2b.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/green1.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/green1_b.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/green2.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/green2b.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/maroon1.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/maroon1_b.jpg" />
+                    </a>
+                </div>
+
+                <div class="image-container">
+                    <a class="image-with-hover-overlay image-hover-zoom">
+                        <div class="image-hover-overlay background-primary">
+                            <div class="image-hover-overlay-content text-center padding-2x"></div>
+                        </div>
+                        <img class="full-img" src="img/maroon2.jpg" />
+                    </a>
+                </div>
 
             </div>
         </article>
