final to upload

--- a/index.html
+++ b/index.html
@@ -37,15 +37,11 @@
 <div id="page-wrapper">
     <header role="banner" class="position-absolute margin-top-30">
         <nav class="background-transparent background-transparent-hightlight full-width sticky">
-            <div class="logo-container">
-                <p class="logo">SAGAKI</p>
-            </div>
             <div class="s-12 l-10">
                 <div class="top-nav right">
                     <ul class="right chevron">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,9 +50,10 @@
     <main role="main">
         <article>
             <header class="section background-white text-center">
-                <h1 class="text-dark text-size-40 text-thin">Your personal tailor for ladies blouses</h1>
-                <p class="text-size-16 text-dark">Call us and book your blouse tailoring. Measurements by video call.</p>
+                <h1 class="text-header">Your personal tailor for ladies blouses</h1>
+                <p class="text-size-18 text-dark">Call us and book your blouse tailoring. Measurements by video call.</p>
             </header>
+        </article>
 
             <!-- Image Gallery Row -->
             <div class="background-white image-row" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px;">
@@ -3004,26 +3001,26 @@
             </div>
         </article>
     </main>
-    <footer>
-        <section class="section-small-padding text-center background-white full-width">
-            <div class="line">
-                <div class="margin">
-                    <div class="s-12 m-12 l-4 margin-m-bottom-30">
-                        <h3 class="text-size-16">Address</h3>
-                        <p class="text-size-14">A-902, Prajapati Gaurov Building, Sector-2, Plot No 3, Navi Mumbai- 410210, Mumbai- India</p>
-                    </div>
-                    <div class="s-12 m-12 l-4 margin-m-bottom-30">
-                        <h3 class="text-size-16">E-mail</h3>
-                        <p class="text-size-14">librachhanda@gmail.com</p>
-                    </div>
-                    <div class="s-12 m-12 l-4">
-                        <h3 class="text-size-16">Phone Numbers</h3>
-                        <p class="text-size-14">+91-9920810978<br>WhatsApp - +91-9819869521</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </footer>
+<!--    <footer>-->
+<!--        <section class="section-small-padding text-center background-white full-width">-->
+<!--            <div class="line">-->
+<!--                <div class="margin">-->
+<!--                    <div class="s-12 m-12 l-4 margin-m-bottom-30">-->
+<!--                        <h3 class="text-size-16">Address</h3>-->
+<!--                        <p class="text-size-14">A-902, Prajapati Gaurov Building, Sector-2, Plot No 3, Navi Mumbai- 410210, Mumbai- India</p>-->
+<!--                    </div>-->
+<!--                    <div class="s-12 m-12 l-4 margin-m-bottom-30">-->
+<!--                        <h3 class="text-size-16">E-mail</h3>-->
+<!--                        <p class="text-size-14">librachhanda@gmail.com</p>-->
+<!--                    </div>-->
+<!--                    <div class="s-12 m-12 l-4">-->
+<!--                        <h3 class="text-size-16">Phone Numbers</h3>-->
+<!--                        <p class="text-size-14">+91-9920810978<br>WhatsApp - +91-9819869521</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>-->
+<!--    </footer>-->
 </div>
 
 
